# confish-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/confish/: __init__.py  _actions.py  _client.py  _config.py  _errors.py  _feeds.py  _http.py  _logging.py  _logs.py  _types.py  webhook.py
tests/: test_actions.py  test_client.py  test_feeds.py  test_logging_handler.py  test_webhook.py
