[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confish"
version = "0.2.0"
description = "Official Python SDK for confish — typed configuration, actions, and webhooks."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "confish" }]
requires-python = ">=3.10"
keywords = ["confish", "configuration", "config", "feature-flags", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://confi.sh"
Documentation = "https://confi.sh/docs"
Repository = "https://github.com/confishhq/confish-python"
Issues = "https://github.com/confishhq/confish-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/confish"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/CHANGELOG.md", "/LICENSE", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/confish"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
